# CMU-VLA-Challenge

./: .gitignore  launch_module.sh  requirements.txt
ai_module_contest/work_space/src/: CMakeLists.txt  gemini_stuff.py  object_detection.py  openai_stuff2.py  package.xml  path_utils.py  process_question.py  prompts.py  publish_answers.py  run_robot.py
docker/: compose_gpu_sys_only.yml
